--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.22",
     "expo-dev-client": "~4.0.20",
+    "expo-file-system": "~17.0.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
