--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@lingui/cli": "^4.11.3",
+    "@lingui/core": "^4.11.3",
+    "@lingui/macro": "^4.11.3",
+    "@lingui/react": "^4.11.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
@@ -18,6 +22,7 @@
     "expo": "~51.0.22",
     "expo-dev-client": "~4.0.20",
     "expo-file-system": "~17.0.1",
+    "expo-linking": "~6.3.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-native": "0.74.3",
@@ -31,6 +36,7 @@
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "babel-plugin-macros": "^3.1.0",
     "typescript": "~5.3.3"
   },
   "private": true
