--- a/app.json
+++ b/app.json
@@ -22,7 +22,8 @@
                 "foregroundImage": "./assets/adaptive-icon.png",
                 "backgroundColor": "#ffffff"
             },
-            "package": "com.alexdavid26.app"
+            "package": "com.alexdavid26.app",
+            "softwareKeyboardLayoutMode": "pan"
         },
         "extra": {
             "eas": {
