--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "expo-file-system": "~17.0.1",
     "expo-linking": "~6.3.1",
     "expo-status-bar": "~1.12.1",
+    "firebase": "^10.13.0",
     "react": "18.2.0",
     "react-native": "0.74.3",
     "react-native-dropdown-select-list": "^2.0.5",
