--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "~51.0.22",
-    "expo-dev-client": "~4.0.20",
+    "expo": "^51.0.31",
+    "expo-dev-client": "~4.0.25",
     "expo-file-system": "~17.0.1",
     "expo-linking": "~6.3.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.0",
     "react": "18.2.0",
-    "react-native": "0.74.3",
+    "react-native": "0.74.5",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-paper": "^5.12.3",
