--- a/package.json
+++ b/package.json
@@ -10,37 +10,30 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@lingui/cli": "^4.11.3",
-    "@lingui/core": "^4.11.3",
-    "@lingui/macro": "^4.11.3",
     "@lingui/react": "^4.11.3",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.10.1",
+    "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
-    "expo": "^51.0.31",
-    "expo-dev-client": "~4.0.25",
-    "expo-file-system": "~17.0.1",
-    "expo-linking": "~6.3.1",
+    "expo": "~51.0.28",
+    "expo-dev-client": "^4.0.25",
+    "expo-linking": "^6.3.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-dropdown-select-list": "^2.0.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "react-native-status-bar-height": "^2.6.0",
-    "react-native-svg": "15.2.0"
+    "react-native-paper": "^5.12.5",
+    "react-native-reanimated": "^3.15.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
+    "@babel/core": "^7.25.2",
+    "@lingui/cli": "^4.11.3",
+    "@lingui/macro": "^4.11.3",
     "@types/react": "~18.2.45",
     "babel-plugin-macros": "^3.1.0",
-    "typescript": "~5.3.3"
+    "typescript": "^5.1.3"
   },
   "private": true
 }
