--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.15.0",
-    "expo-localization": "~15.0.3"
+    "expo-localization": "~15.0.3",
+    "react-native-gesture-handler": "~2.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
