--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "app",
+  "name": "praiseup",
   "version": "1.0.0",
   "main": "expo/AppEntry.js",
   "scripts": {
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@lingui/cli": "^4.11.3",
+    "@lingui/macro": "^4.11.3",
     "@lingui/react": "^4.11.3",
-    "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -24,17 +26,13 @@
     "firebase": "^10.13.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-gesture-handler": "^2.18.1",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.15.0",
-    "react-native-gesture-handler": "~2.16.1"
+    "react-native-reanimated": "^3.15.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@lingui/cli": "^4.11.3",
-    "@lingui/macro": "^4.11.3",
+    "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
-    "babel-plugin-macros": "^3.1.0",
     "typescript": "^5.1.3"
   },
   "private": true
