--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "praiseup",
   "version": "1.0.0",
-  "main": "./node_modules/expo/AppEntry.js",
+  "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
@@ -10,32 +10,31 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
-    "@lingui/cli": "^4.11.2",
-    "@lingui/core": "^4.11.2",
-    "@lingui/macro": "^4.11.2",
-    "@lingui/react": "^4.11.2",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@lingui/react": "^4.11.3",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
-    "expo-dev-client": "~4.0.25",
-    "expo-linking": "~6.3.1",
-    "expo-localization": "~15.0.3",
+    "expo-dev-client": "^4.0.25",
+    "expo-linking": "^6.3.1",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
+    "react-native-gesture-handler": "^2.18.1",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5"
+    "react-native-reanimated": "^3.15.1",
+    "react-native-safe-area-context": "^4.10.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.0",
-    "@types/react": "~18.2.79",
-    "typescript": "~5.3.3"
+    "@babel/core": "^7.25.2",
+    "@lingui/cli": "^4.11.3",
+    "@lingui/macro": "^4.11.3",
+    "@types/react": "~18.2.45",
+    "babel-plugin-macros": "^3.1.0",
+    "typescript": "^5.1.3"
   },
   "private": true
 }
