--- a/package.json
+++ b/package.json
@@ -19,23 +19,23 @@
     "expo": "~51.0.28",
     "expo-dev-client": "^4.0.25",
     "expo-linking": "^6.3.1",
+    "expo-localization": "~15.0.3",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.0",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
+    "react": "^18.3.1",
+    "react-native": "^0.75.2",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.15.1",
-    "react-native-safe-area-context": "^4.10.9",
-    "expo-localization": "~15.0.3"
+    "react-native-safe-area-context": "^4.10.9"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@lingui/cli": "^4.11.3",
     "@lingui/macro": "^4.11.3",
-    "@types/react": "~18.2.45",
+    "@types/react": "^18.3.4",
     "babel-plugin-macros": "^3.1.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.5.4"
   },
   "private": true
 }
