--- a/app.json
+++ b/app.json
@@ -5,14 +5,16 @@
         "version": "1.0.0",
         "orientation": "portrait",
         "icon": "./assets/icon.png",
-        "userInterfaceStyle": "light",
+        "userInterfaceStyle": "automatic",
         "splash": {
             "image": "./assets/splash.png",
             "resizeMode": "contain",
             "backgroundColor": "#ffffff"
         },
         "ios": {
-            "supportsTablet": true
+            "supportsTablet": true,
+            "bundleIdentifier": "com.praiseup.app",
+            "googleServicesFile": "./GoogleService-Info.plist"
         },
         "android": {
             "adaptiveIcon": {
@@ -34,6 +36,7 @@
                 "projectId": "ca9701e5-9bb2-4a8c-9e8a-2bd54c938e0b"
             }
         },
-        "owner": "alexdavid26"
+        "owner": "alexdavid26",
+        "scheme": "praiseup"
     }
 }
