--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "main": "expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@lingui/react": "^4.11.3",
     "@react-native-async-storage/async-storage": "^2.0.0",
-    "@react-native-google-signin/google-signin": "^12.2.1",
+    "@react-native-google-signin/google-signin": "^12.1.0",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
