--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-gesture-handler": "^2.18.1",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.15.1",
-    "react-native-safe-area-context": "^4.10.9"
+    "react-native-safe-area-context": "^4.10.9",
+    "react-native-screens": "^3.34.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
