--- a/app.json
+++ b/app.json
@@ -5,16 +5,14 @@
         "version": "1.0.0",
         "orientation": "portrait",
         "icon": "./assets/icon.png",
-        "userInterfaceStyle": "automatic",
+        "userInterfaceStyle": "light",
         "splash": {
             "image": "./assets/splash.png",
             "resizeMode": "contain",
             "backgroundColor": "#ffffff"
         },
         "ios": {
-            "supportsTablet": true,
-            "bundleIdentifier": "com.praiseup.app",
-            "googleServicesFile": "./GoogleService-Info.plist"
+            "supportsTablet": true
         },
         "android": {
             "adaptiveIcon": {
@@ -36,7 +34,6 @@
                 "projectId": "ca9701e5-9bb2-4a8c-9e8a-2bd54c938e0b"
             }
         },
-        "owner": "alexdavid26",
-        "scheme": "praiseup"
+        "owner": "alexdavid26"
     }
 }
