--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
     "react": "^18.3.1",
     "react-native": "^0.75.2",
     "react-native-gesture-handler": "^2.18.1",
+    "react-native-get-random-values": "^1.11.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.15.1",
     "react-native-safe-area-context": "^4.10.9",
-    "react-native-screens": "^3.34.0"
+    "react-native-screens": "^3.34.0",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@lingui/cli": "^4.11.3",
     "@lingui/macro": "^4.11.3",
     "@types/react": "^18.3.4",
+    "@types/uuid": "^10.0.0",
     "babel-plugin-macros": "^3.1.0",
     "typescript": "^5.5.4"
   },
