--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-native-reanimated": "^3.15.1",
     "react-native-safe-area-context": "^4.10.9",
     "react-native-screens": "^3.34.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "expo-file-system": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
