Personal albums syncing, performance issues resolved

--- a/app.json
+++ b/app.json
@@ -29,10 +29,7 @@
             [
                 "expo-font",
                 {
-                    "fonts": [
-                        "./assets/fonts/patrickHand.ttf",
-                        "./assets/fonts/robotoMono.ttf"
-                    ]
+                    "fonts": ["./assets/fonts/patrickHand.ttf"]
                 }
             ]
         ],
