--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@lingui/react": "^4.11.3",
-    "@react-native-async-storage/async-storage": "^2.0.0",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
@@ -22,14 +22,14 @@
     "expo-localization": "~15.0.3",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.0",
-    "react": "^18.3.1",
-    "react-native": "^0.75.2",
-    "react-native-gesture-handler": "^2.18.1",
+    "react": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "^1.11.0",
     "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "^3.15.1",
-    "react-native-safe-area-context": "^4.10.9",
-    "react-native-screens": "^3.34.0",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
     "uuid": "^10.0.0",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10"
@@ -38,10 +38,10 @@
     "@babel/core": "^7.25.2",
     "@lingui/cli": "^4.11.3",
     "@lingui/macro": "^4.11.3",
-    "@types/react": "^18.3.4",
+    "@types/react": "~18.2.79",
     "@types/uuid": "^10.0.0",
     "babel-plugin-macros": "^3.1.0",
-    "typescript": "^5.5.4"
+    "typescript": "~5.3.3"
   },
   "private": true
 }
