--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@react-navigation/stack": "^6.4.1",
     "expo": "~51.0.28",
     "expo-dev-client": "^4.0.25",
+    "expo-file-system": "~17.0.1",
+    "expo-font": "~12.0.10",
     "expo-linking": "^6.3.1",
     "expo-localization": "~15.0.3",
+    "expo-screen-orientation": "~7.0.5",
     "expo-status-bar": "~1.12.1",
-    "firebase": "^10.13.0",
+    "firebase": "^10.13.2",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
@@ -30,10 +33,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "uuid": "^10.0.0",
-    "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.10",
-    "expo-screen-orientation": "~7.0.5"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
