Album source on website

--- a/extra/website/firebase.json
+++ b/extra/website/firebase.json
@@ -6,6 +6,10 @@
             {
                 "source": "/song/**",
                 "destination": "/index.html"
+            },
+            {
+                "source": "/album/**",
+                "destination": "/index.html"
             }
         ],
         "headers": [
