--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "expo-network": "~6.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
