--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@expo/vector-icons": "^14.0.2",
     "@lingui/react": "^4.11.3",
     "@react-native-async-storage/async-storage": "1.23.1",
@@ -23,6 +24,7 @@
     "expo-font": "~12.0.10",
     "expo-linking": "^6.3.1",
     "expo-localization": "~15.0.3",
+    "expo-network": "~6.0.1",
     "expo-screen-orientation": "~7.0.5",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.2",
@@ -34,8 +36,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "uuid": "^10.0.0",
-    "expo-network": "~6.0.1"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
