Contact Us page, Auth loading logic

--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ WEB_CLIENT_ID=742969818984-3ikbnc4qupog25uk37oi4jbc3g4knpnb.apps.googleuserconte
 IOS_CLIENT_ID=742969818984-t74n39033t3chmf03vs5k4gueoq6oe6m.apps.googleusercontent.com
 ANDROID_CLIENT_ID=742969818984-ha1ji8a7bfjig6qdcqishkinprmhamee.apps.googleusercontent.com
 EXPO_CLIENT_ID=742969818984-di8jnsnr2mnan8gb1q3usibouga2qb4m.apps.googleusercontent.com 
+EMAILJS_TOKEN=Mve3zlLJEaefNc05n3Y_m
