--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@emailjs/browser": "^4.4.1",
+    "@emailjs/react-native": "^4.2.2",
     "@expo/vector-icons": "^14.0.2",
     "@lingui/react": "^4.11.3",
     "@react-native-async-storage/async-storage": "1.23.1",
