Update desktop app and personal albums downloading

--- a/extra/website/firebase.json
+++ b/extra/website/firebase.json
@@ -10,6 +10,10 @@
             {
                 "source": "/album/**",
                 "destination": "/index.html"
+            },
+            {
+                "source": "/personal/**",
+                "destination": "/index.html"
             }
         ],
         "headers": [
