--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-screen-orientation": "~7.0.5",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.2",
+    "firebase-admin": "^12.6.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
