--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
+    "axios": "^1.7.7",
     "expo": "~51.0.28",
     "expo-dev-client": "^4.0.25",
     "expo-file-system": "~17.0.1",
@@ -29,6 +30,7 @@
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.2",
     "firebase-admin": "^12.6.0",
+    "firebase-admin": "^12.7.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
     "react-native-gesture-handler": "~2.16.1",
