--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@emailjs/react-native": "^4.2.2",
     "@expo/vector-icons": "^14.0.2",
+    "@google-cloud/storage": "^7.14.0",
     "@lingui/react": "^4.11.3",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-google-signin/google-signin": "^13.1.0",
@@ -29,7 +30,6 @@
     "expo-screen-orientation": "~7.0.5",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.13.2",
-    "firebase-admin": "^12.6.0",
     "firebase-admin": "^12.7.0",
     "react": "18.2.0",
     "react-native": "0.74.5",
