--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "expo-dev-client": "^4.0.25",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
+    "expo-linear-gradient": "~13.0.2",
     "expo-linking": "^6.3.1",
     "expo-localization": "~15.0.3",
     "expo-network": "~6.0.1",
     "expo-screen-orientation": "~7.0.5",
     "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
     "firebase": "^10.13.2",
     "firebase-admin": "^12.7.0",
     "react": "18.2.0",
@@ -39,16 +41,19 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
+    "tinycolor2": "^1.6.0",
     "uuid": "^10.0.0",
-    "expo-system-ui": "~3.0.7"
+    "expo-splash-screen": "~0.27.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@lingui/cli": "^4.11.3",
     "@lingui/macro": "^4.11.3",
     "@types/react": "~18.2.79",
+    "@types/tinycolor2": "^1.4.6",
     "@types/uuid": "^10.0.0",
     "babel-plugin-macros": "^3.1.0",
+    "expo-module-scripts": "^4.0.2",
     "typescript": "~5.3.3"
   },
   "private": true
