--- a/package.json
+++ b/package.json
@@ -1,60 +1,61 @@
 {
-  "name": "praiseup",
-  "version": "1.0.0",
-  "main": "expo/AppEntry.js",
-  "scripts": {
-    "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
-  },
-  "dependencies": {
-    "@emailjs/react-native": "^4.2.2",
-    "@expo/vector-icons": "^14.0.2",
-    "@google-cloud/storage": "^7.14.0",
-    "@lingui/react": "^4.11.3",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-google-signin/google-signin": "^13.1.0",
-    "@react-navigation/bottom-tabs": "^6.6.1",
-    "@react-navigation/native": "^6.1.18",
-    "@react-navigation/native-stack": "^6.11.0",
-    "@react-navigation/stack": "^6.4.1",
-    "axios": "^1.7.7",
-    "expo": "~51.0.28",
-    "expo-dev-client": "^4.0.25",
-    "expo-file-system": "~17.0.1",
-    "expo-font": "~12.0.10",
-    "expo-linear-gradient": "~13.0.2",
-    "expo-linking": "^6.3.1",
-    "expo-localization": "~15.0.3",
-    "expo-network": "~6.0.1",
-    "expo-screen-orientation": "~7.0.5",
-    "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.7",
-    "firebase": "^10.13.2",
-    "firebase-admin": "^12.7.0",
-    "react": "18.2.0",
-    "react-native": "0.74.5",
-    "react-native-gesture-handler": "~2.16.1",
-    "react-native-get-random-values": "^1.11.0",
-    "react-native-paper": "^5.12.5",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.5",
-    "react-native-screens": "3.31.1",
-    "tinycolor2": "^1.6.0",
-    "uuid": "^10.0.0",
-    "expo-splash-screen": "~0.27.7"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@lingui/cli": "^4.11.3",
-    "@lingui/macro": "^4.11.3",
-    "@types/react": "~18.2.79",
-    "@types/tinycolor2": "^1.4.6",
-    "@types/uuid": "^10.0.0",
-    "babel-plugin-macros": "^3.1.0",
-    "expo-module-scripts": "^4.0.2",
-    "typescript": "~5.3.3"
-  },
-  "private": true
+    "name": "praiseup",
+    "version": "1.0.0",
+    "main": "expo/AppEntry.js",
+    "scripts": {
+        "start": "expo start",
+        "android": "expo start --android",
+        "ios": "expo start --ios",
+        "web": "expo start --web"
+    },
+    "dependencies": {
+        "@emailjs/react-native": "^4.2.2",
+        "@expo/vector-icons": "^14.0.2",
+        "@google-cloud/storage": "^7.14.0",
+        "@lingui/react": "^4.11.3",
+        "@react-native-async-storage/async-storage": "1.23.1",
+        "@react-native-google-signin/google-signin": "^13.1.0",
+        "@react-navigation/bottom-tabs": "^6.6.1",
+        "@react-navigation/native": "^6.1.18",
+        "@react-navigation/native-stack": "^6.11.0",
+        "@react-navigation/stack": "^6.4.1",
+        "axios": "^1.7.7",
+        "expo": "~51.0.28",
+        "expo-dev-client": "~4.0.29",
+        "expo-file-system": "~17.0.1",
+        "expo-font": "~12.0.10",
+        "expo-linear-gradient": "~13.0.2",
+        "expo-linking": "^6.3.1",
+        "expo-localization": "~15.0.3",
+        "expo-network": "~6.0.1",
+        "expo-screen-orientation": "~7.0.5",
+        "expo-status-bar": "~1.12.1",
+        "expo-system-ui": "~3.0.7",
+        "firebase": "^10.13.2",
+        "firebase-admin": "^12.7.0",
+        "react": "18.2.0",
+        "react-native": "0.74.5",
+        "react-native-gesture-handler": "~2.16.1",
+        "react-native-get-random-values": "^1.11.0",
+        "react-native-paper": "^5.12.5",
+        "react-native-reanimated": "~3.10.1",
+        "react-native-safe-area-context": "4.10.5",
+        "react-native-screens": "3.31.1",
+        "tinycolor2": "^1.6.0",
+        "uuid": "^10.0.0",
+        "expo-splash-screen": "~0.27.7",
+        "@expo/config-plugins": "^9.0.10"
+    },
+    "devDependencies": {
+        "@babel/core": "^7.25.2",
+        "@lingui/cli": "^4.11.3",
+        "@lingui/macro": "^4.11.3",
+        "@types/react": "~18.2.79",
+        "@types/tinycolor2": "^1.4.6",
+        "@types/uuid": "^10.0.0",
+        "babel-plugin-macros": "^3.1.0",
+        "expo-module-scripts": "^4.0.2",
+        "typescript": "~5.3.3"
+    },
+    "private": true
 }
