--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@react-navigation/native-stack": "^6.11.0",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.7",
+    "crypto": "^1.0.1",
     "expo": "~51.0.28",
+    "expo-av": "~14.0.7",
     "expo-dev-client": "~4.0.29",
     "expo-file-system": "~17.0.1",
     "expo-font": "~12.0.10",
@@ -44,8 +46,7 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "tinycolor2": "^1.6.0",
-    "uuid": "^10.0.0",
-    "expo-av": "~14.0.7"
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
