--- a/extra/website/firebase.json
+++ b/extra/website/firebase.json
@@ -1,40 +1,16 @@
 {
-    "hosting": {
-        "public": "public",
-        "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-        "rewrites": [
-            {
-                "source": "/song/**",
-                "destination": "/index.html"
-            },
-            {
-                "source": "/album/**",
-                "destination": "/index.html"
-            },
-            {
-                "source": "/personal/**",
-                "destination": "/index.html"
-            }
-        ],
-        "headers": [
-            {
-                "source": "/.well-known/assetlinks.json",
-                "headers": [
-                    {
-                        "key": "Content-Type",
-                        "value": "application/json"
-                    }
-                ]
-            },
-            {
-                "source": "/apple-app-site-association",
-                "headers": [
-                    {
-                        "key": "Content-Type",
-                        "value": "application/json"
-                    }
-                ]
-            }
-        ]
-    }
+  "hosting": {
+    "public": "dist",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
+    ]
+  }
 }
