--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "tinycolor2": "^1.6.0",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "expo-updates": "~0.25.27"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
